# odyssey

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  Cargo.toml  HACKING.md  Makefile  README.md  grammar.txt
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
include/: errors.h  lexer.h  parser.h
source/: lib.cpp
src/: ast.cpp  ast.h  code_visitor.cpp  code_visitor.h  errors.cpp  errors.h  lexer.cpp  lexer.h  lexer.rs  main.cpp  main.rs  parser.cpp  parser.h
test/: CMakeLists.txt  test_1.od  test_init.od
test/source/: odyssey_test.cpp
